Unify celestial lighting and path-depth control under maxBounces